--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6, p, a, li { color: white; font-family: Raleway; font-size
 .logo { width: 125px; margin-left: 10px; margin-bottom: 10px;}
 .cart { order: 1; display:flex; position: relative;}
 .cartlogo {width: 50px; margin-right: 10px;}
-#counter{ position: absolute; background-color: red; top:25px; left:35px; width: 20px; height:20px; border-radius:25px; color: white; text-align: center; border:none; outline: none; display: none;  }
+#counter{-webkit-appearance: none; position: absolute; background-color: red; top:25px; left:35px; width: 20px; height:20px; border-radius:25px; color: white; text-align: center; border:none; outline: none; display: none;  }
 
 .headertext	{flex-basis: 600px; 
 			display: flex; 
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6, p, a, li { color: white; font-family: Raleway; font-size
 .catergories div {-ms-flex: auto;flex: auto; 
   display: flex; 
    margin-bottom: 5px; margin-right: 5px;justify-content: center; align-items: center;}
-.catergories p {position: absolute; font-size:20px;}
+.catergories p {-webkit-appearance: none; position: absolute; font-size:20px;}
 .catergories div {background: linear-gradient(rgba(0,0,0,0.6) 100%,transparent);
 	background-size: cover; position: relative;}
 .catergories div:nth-of-type(3n) {margin-right: 0;}
